--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ function calAngkaMutu()
     else if(angkaMutu>=77 & angkaMutu<80){
         hurufMutu="A-"
     }
-    else if(angkaMutu>=80 & angkaMutu<=100){
+    else if(angkaMutu>=80){
         hurufMutu="A"
     }
     $("#hurufmutu").html("<b>"+hurufMutu+"</b>");
