--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </tr>
       </tbody>
     </table>
-<font color="#bbb"><small><i>@bian_budiawan | IT-02</i></small></font>
+<font color="#ccc"><small><i>@bian.budiawan | IT-02</i></small></font>
 <script>
 $("#tugas1").keyup(function(){
     var hitungTugas1 = $(this).val()*15/100;
